// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FontAwesomeIcon /> should render correctly 1`] = `
<button
  style={
    Object {
      "backgroundColor": "inherit",
      "border": "none",
      "cursor": "pointer",
      "padding": "0",
    }
  }
  tabIndex={0}
  type="button"
>
  <i
    alt="globe"
    className="fa fa-globe fa-2x"
    id="globeIcon"
  />
</button>
`;

exports[`<FontAwesomeIcon /> should render correctly with additional props 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "inherit",
      "border": "none",
      "cursor": "pointer",
      "padding": "0",
    }
  }
  tabIndex={0}
  type="button"
>
  <i
    alt="testing icon"
    className="fa fa-globe fa-3x"
    id="globeIcon"
    style={
      Object {
        "color": "blue",
      }
    }
  />
</button>
`;
